修正大部分反编译错误，重构必要代码